# rdt-kernel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Usage  kernel  kernel.ipynb  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
examples/: demo.ipynb  rdt_variance_plot.py
rdt_kernel/: __init__.py  rdt.py
rdt_kernel.egg-info/: PKG-INFO  SOURCES.txt
src/rdt_kernel/: __init__.py
tests/: test_core.py  test_smoke.py
