[metadata]
name = rdt-kernel
version = 1.1.0
author = Steven Reid
author_email = contact@stevenreidresearch.org
description = Recursive Division Tree (RDT) Kernel — physics-inspired diffusion and entropy simulation using PyTorch (CPU & GPU)
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/RRG314/rdt-kernel
project_urls =
    Source = https://github.com/RRG314/rdt-kernel
    Tracker = https://github.com/RRG314/rdt-kernel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.10
